--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <html>
-  <body>It's alive!</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>boblauer.com</title>
+    <style>
+      html, body {
+        background-color: #E6ECF0;
+        font-family: "Palatino, Bookman, Arial";
+      }
+
+      body {
+        padding: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="./posts/2017-11-10-Proper-Variable-Naming.html">Property Variable Naming</a>
+  </body>
 </html>
